# MortgageMate

./: .gitignore  README.md  package-lock.json  package.json
backend - C++ crow/: CMakeLists.txt
backend - C++ crow/src/: main.cpp
backend - express/: .project  server.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  BarChart.tsx  ExportButton.tsx  Header.tsx  LoanBalanceChart.tsx  MortgageComparison.tsx  PieChart.tsx  Register.tsx  SignIn.tsx  apollo-client.ts  index.css  main.tsx
frontend/src/AmortizationTable/: AmortizationTable.tsx
frontend/src/LoanDetails/: LoanDetails.tsx
